--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 
 body{
     color:rgb(0, 0, 0);
-    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+    font-family: Arial, Helvetica, sans-serif;
     background-color: #d38450;
 }
 
@@ -26,6 +26,7 @@ header{
     align-items: center;
     height: 60px;
     padding: 0 10px;
+    box-shadow: 3px 3px 13px rgba(0, 0, 0, 0.5);
 }
 
 .container {
@@ -42,25 +43,112 @@ header{
     gap: 30px;
 }
 
-.menu ul li a{
+a{
     color: rgb(0, 0, 0);
 }
 
-main{
-    margin-top: 4%;
-    margin-left: 1%;
-    margin-right: 1%;
-    height: 450px;
+li:hover a {
+  color: #d38450;
+}
+
+#titulo{
+    text-align: center;
+    padding-top: 2%;
+}
+
+main section{
+    flex-direction: row;
+    margin-top: 8%;
+    margin-left: 15%;
+    margin-right: 15%;
+    height: 300px;
     background-color: antiquewhite;
+    border-radius: 10px;
+    box-shadow: 8px 8px 10px rgba(0, 0, 0, 0.5);
 }
 
 main section p{
     display: flex;
-    text-align: left;
-    padding: 5%;
+    text-align: justify;
+    padding-top: 4%;
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-bottom: 2%;
+    font-size: 18px;
+    line-height: 150%;
+    gap: 30px;
 }
 
 
-#direitos{
+.containerB{
+    display: flex;
+    justify-content: center;
+    align-items: center; 
+}
+
+
+.botao{
+    color: #fff;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+    background-color: #d38450;
+    cursor: pointer;
+}
+
+.botao:hover{
+    background-color: #a35f31;
+}
+
+
+
+h2{
+    padding-top: 2%;
+    padding-left: 4%;
+    padding-right: 4%;
+}
+
+.perfil{
+    border-radius: 40px;
+    width: 190px;
+    height: 190px;
+
+}
+
+form{
+    padding-top: 4%;
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-bottom: 2%;
     text-align: center;
+}
+
+.listaHabi{
+    padding-top: 4%;
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-bottom: 2%;
+    text-align: left;
+    font-size: 18px;
+    line-height: 150%;
+}
+
+footer img {
+  width: 30px;
+}
+
+#direitos{
+    flex-direction: row;
+    text-align: center;
+    padding-top: 100px;
+}
+
+.container2{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    gap: 20px; 
 }
